// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`DiffHunksRenderer proper buffers should be prepended to additions colum in split style: rendered rows 1`] = `
{
  "additions": [
    "buffer x1",
    "u1/s1 context #1(alt 2) |import IconSprite from './IconSprite';|",
    "u3/s2 change-addition #2 |import HeaderSimple from '../components/HeaderSimple';|",
    "u4/s3 change-addition #3 |import Hero from '../components/Hero';|",
    "u5/s4 context #4 ||",
    "u6/s5 context #5 |export default function Home() {|",
    "u7/s6 context #6 |  return (|",
    "u8/s7 context #7 |    <div>|",
    "u10/s8 change-addition #8 |      <HeaderSimple />|",
    "u11/s9 context #9 |      <IconSprite />|",
    "u12/s10 change-addition #10 |      <h1>Hello!</h1>|",
    "u13/s11 context #11(alt 10) |    </div>|",
    "u14/s12 context #12(alt 11) |  );|",
    "u15/s13 context #13(alt 12) |}|",
  ],
  "deletions": [
    "u0/s0 change-deletion #1 |import * as 'react';|",
    "u1/s1 context #2(alt 1) |import IconSprite from './IconSprite';|",
    "u2/s2 change-deletion #3 |import Header from './Header';|",
    "buffer x1",
    "u5/s4 context #4 ||",
    "u6/s5 context #5 |export default function Home() {|",
    "u7/s6 context #6 |  return (|",
    "u8/s7 context #7 |    <div>|",
    "u9/s8 change-deletion #8 |      <Header />|",
    "u11/s9 context #9 |      <IconSprite />|",
    "buffer x1",
    "u13/s11 context #10(alt 11) |    </div>|",
    "u14/s12 context #11(alt 12) |  );|",
    "u15/s13 context #12(alt 13) |}|",
  ],
}
`;

exports[`DiffHunksRenderer proper buffers should be prepended to deletions colum in split style: rendered rows 1`] = `
{
  "additions": [
    "u0/s0 change-addition #1 |import * as 'react';|",
    "u1/s1 context #2(alt 1) |import IconSprite from './IconSprite';|",
    "u4/s2 change-addition #3 |import Header from './Header';|",
    "buffer x1",
    "u5/s4 context #4 ||",
    "u6/s5 context #5 |export default function Home() {|",
    "u7/s6 context #6 |  return (|",
    "u8/s7 context #7 |    <div>|",
    "u10/s8 change-addition #8 |      <Header />|",
    "u11/s9 context #9 |      <IconSprite />|",
    "buffer x1",
    "u13/s11 context #10(alt 11) |    </div>|",
    "u14/s12 context #11(alt 12) |  );|",
    "u15/s13 context #12(alt 13) |}|",
  ],
  "deletions": [
    "buffer x1",
    "u1/s1 context #1(alt 2) |import IconSprite from './IconSprite';|",
    "u2/s2 change-deletion #2 |import HeaderSimple from '../components/HeaderSimple';|",
    "u3/s3 change-deletion #3 |import Hero from '../components/Hero';|",
    "u5/s4 context #4 ||",
    "u6/s5 context #5 |export default function Home() {|",
    "u7/s6 context #6 |  return (|",
    "u8/s7 context #7 |    <div>|",
    "u9/s8 change-deletion #8 |      <HeaderSimple />|",
    "u11/s9 context #9 |      <IconSprite />|",
    "u12/s10 change-deletion #10 |      <h1>Hello!</h1>|",
    "u13/s11 context #11(alt 10) |    </div>|",
    "u14/s12 context #12(alt 11) |  );|",
    "u15/s13 context #13(alt 12) |}|",
  ],
}
`;

exports[`DiffHunksRenderer additions and deletions should be empty when unified: rendered rows 1`] = `
[
  "u0/s0 change-deletion #1 |import * as 'react';|",
  "u1/s1 context #1(alt 2) |import IconSprite from './IconSprite';|",
  "u2/s2 change-deletion #3 |import Header from './Header';|",
  "u3/s2 change-addition #2 |import HeaderSimple from '../components/HeaderSimple';|",
  "u4/s3 change-addition #3 |import Hero from '../components/Hero';|",
  "u5/s4 context #4 ||",
  "u6/s5 context #5 |export default function Home() {|",
  "u7/s6 context #6 |  return (|",
  "u8/s7 context #7 |    <div>|",
  "u9/s8 change-deletion #8 |      <Header />|",
  "u10/s8 change-addition #8 |      <HeaderSimple />|",
  "u11/s9 context #9 |      <IconSprite />|",
  "u12/s10 change-addition #10 |      <h1>Hello!</h1>|",
  "u13/s11 context #11(alt 10) |    </div>|",
  "u14/s12 context #12(alt 11) |  );|",
  "u15/s13 context #13(alt 12) |}|",
]
`;

exports[`DiffHunksRenderer a diff with only additions should have an empty deletions column: rendered rows 1`] = `
[
  "u0/s0 change-addition #1 |import IconSprite from './IconSprite';|",
  "u1/s1 change-addition #2 |import HeaderSimple from '../components/HeaderSimple';|",
  "u2/s2 change-addition #3 |import Hero from '../components/Hero';|",
  "u3/s3 change-addition #4 ||",
  "u4/s4 change-addition #5 |export default function Home() {|",
  "u5/s5 change-addition #6 |  return (|",
  "u6/s6 change-addition #7 |    <div>|",
  "u7/s7 change-addition #8 |      <HeaderSimple />|",
  "u8/s8 change-addition #9 |      <IconSprite />|",
  "u9/s9 change-addition #10 |      <h1>Hello!</h1>|",
  "u10/s10 change-addition #11 |    </div>|",
  "u11/s11 change-addition #12 |  );|",
  "u12/s12 change-addition #13 |}|",
]
`;

exports[`DiffHunksRenderer a diff with only deletions should have an empty additions column: rendered rows 1`] = `
[
  "u0/s0 change-deletion #1 |import * as 'react';|",
  "u1/s1 change-deletion #2 |import IconSprite from './IconSprite';|",
  "u2/s2 change-deletion #3 |import Header from './Header';|",
  "u3/s3 change-deletion #4 ||",
  "u4/s4 change-deletion #5 |export default function Home() {|",
  "u5/s5 change-deletion #6 |  return (|",
  "u6/s6 change-deletion #7 |    <div>|",
  "u7/s7 change-deletion #8 |      <Header />|",
  "u8/s8 change-deletion #9 |      <IconSprite />|",
  "u9/s9 change-deletion #10 |    </div>|",
  "u10/s10 change-deletion #11 |  );|",
  "u11/s11 change-deletion #12 |}|",
]
`;
